fury-on-gke/manifests/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Grafana"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/grafana.png"
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.fury.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port: 
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Forecastle"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/Forecastle/master/assets/web/forecastle-round-100px.png"
  name: forecastle
  namespace: ingress-nginx
spec:
  ingressClassName: "nginx"
  rules:
  - host: directory.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: forecastle
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "OpenSearch Dashboards"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/opensearch-project/OpenSearch-Dashboards/main/src/plugins/home/public/assets/logos/opensearch_mark_centered.svg"
  name: opensearch-dashboards
  namespace: logging
spec:
  ingressClassName: "nginx"
  rules:
  - host: logs.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: opensearch-dashboards
              port: 
                number: 5601
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Alertmanager"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/alert-manager.png"
  namespace: monitoring
  name: alertmanager
spec:
  ingressClassName: "nginx"
  rules:
  - host: alertmanager.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: alertmanager-main
            port: 
              number: 9093
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Prometheus"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/prometheus.png"
  namespace: monitoring
  name: prometheus
spec:
  ingressClassName: "nginx"
  rules:
    - host: prometheus.fury.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port: 
                  number: 9090
---
